checked box for changing visibility of project, fixed height of the project card

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -137,6 +137,10 @@ $navbar-breakpoint: 600px;
   color: black;
 }
 
+.visible span {
+  padding: 5px;
+}
+
 .columns.scroll{
   overflow: scroll;
   scroll-snap-type: x mandatory;
@@ -155,20 +159,28 @@ $navbar-breakpoint: 600px;
     }
   }
 }
-
-a {
-  color: black;
+.projectForm {
+  padding-bottom: 20px;
 }
 
-p.is-small {
-  font-size: small;
-}
-
-.card {
+.projectCard {
   .card-content {
     padding-bottom: 10px;
   }
+
   hr {
     margin-bottom: 10px;
+  }
+
+  .description {
+    height: 169px;
+  }
+
+  .is-small {
+    font-size: small;
+  }
+
+  a {
+    color: black;
   }
 }
